feat: Updated description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Website for Bailas Dance Studio"
+      content="Bailas Estudio de Baile Urbano"
     />
 
     <title>Bailas Estudio</title>
